--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,12 @@ autom4te.cache
 config.guess
 config.h
 config.h.in
+config.h.in~
 config.log
 config.status
 config.sub
 configure
+configure~
 compile
 depcomp
 install-sh
